--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
               <circle cx="1" cy="1" r="1" />
             </svg>
-            <div class="text-sm leading-6 text-gray-600">Chief Operation Officer, Betr Media</div>
+            <div class="text-sm leading-6 text-gray-600">Chief Operating Officer, Betr Media</div>
           </div>
         </figcaption>
       </figure>
